<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping</name>
  <version>0.0.0</version>
  <description>Mapping with Inertial Sense and Ouster</description>
  <maintainer email="fathoni.id@gmail.com">toni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ouster_ros</depend>
  <depend>inertial_sense_ros</depend>
  <depend>odom_to_tf_ros2</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>python3-rosbags-pip</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
